[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qivto-api-client"
version = "1.1.0"
description = "Python client for the QIVTO Public API"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
